--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "reveal": "^0.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
