--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.3.4",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
+    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
